--- a/src/index.css
+++ b/src/index.css
@@ -5,37 +5,28 @@
 /* Make the slick dots vertical and move to right */
 .slick-dots {
   position: absolute !important;
-  top: 50% !important;
-  right: 10px !important;
-  left: auto !important; /* ← this blocks left align */
   bottom: auto !important;
-  transform: translateY(-50%) !important;
-  width: auto !important; /* important: removes 100% width default */
   display: flex !important;
-  flex-direction: column !important;
-  gap: 10px;
+  margin-top: 20px !important;
+  gap: 7px;
   justify-content: center;
-  align-items: flex-start;
-  padding: 0;
-  margin: 0;
   list-style: none;
   z-index: 1;
   background: transparent;
-  text-align: left !important;
 }
 
 .slick-dots li button:before {
-  font-size: 15px !important;
-  color: rgb(0, 0, 0) !important;
-  opacity: 0.75 !important;
-  border: 2px solid white !important;
-  border-radius: 50%;
+  font-size: 10px !important;
+  color: rgba(255, 255, 255, 0.664) !important;
+  border: 1px solid rgba(255, 255, 255, 0.664) !important;
+  opacity: 0.5 !important;
+  border-radius: 10px;
   transition: all 0.3s;
 }
 
 .slick-dots li.slick-active button:before {
-  color: rgba(255, 255, 255, 0) !important;
-  border: 2px solid black !important;
-  transform: scale(1.2) !important;
-  opacity: 1;
+  color: rgb(255, 255, 255) !important;
+  border: none !important;
+  transform: scale(2.5) !important;
+  opacity: 0.75 !important;
 }
