--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
   bottom: auto !important;
   display: flex !important;
   margin-top: 20px !important;
-  gap: 7px;
+  gap: auto;
   justify-content: center;
   list-style: none;
   z-index: 1;
